[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Sounds/titleScreenMusic.wav" type="AudioStream" id=2]
[ext_resource path="res://Scenes/Transition.tscn" type="PackedScene" id=3]
[ext_resource path="res://Sprites/UISprites/TitleScreen.png" type="Texture" id=4]
[ext_resource path="res://Sprites/UISprites/START.png" type="Texture" id=5]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
autoplay = true

[node name="Node" type="Node" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="Node"]

[node name="ColorRect" type="ColorRect" parent="Node/CanvasLayer"]
margin_right = 1022.0
margin_bottom = 599.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer2" type="CanvasLayer" parent="."]

[node name="Transition" parent="CanvasLayer2" instance=ExtResource( 3 )]
color = Color( 0.596078, 0.909804, 0.0313726, 1 )

[node name="TitleScreen" type="Sprite" parent="CanvasLayer2"]
position = Vector2( 512, 301 )
texture = ExtResource( 4 )

[node name="Button" type="Button" parent="CanvasLayer2"]
margin_left = 442.0
margin_top = 503.0
margin_right = 566.0
margin_bottom = 546.0
icon = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="finished" from="MenuMusic" to="." method="_on_MenuMusic_finished"]
[connection signal="scene_changed" from="CanvasLayer2/Transition" to="." method="_on_Transition_scene_changed"]
[connection signal="pressed" from="CanvasLayer2/Button" to="." method="_on_Button_pressed"]
